--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ h2{
 
 p{
     color: #000000;
-    padding-left: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     text-align: justify;
 }
 
