--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@
 
 h1{
     color: #000000;
-    font-size: 40px;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 h2{
-    font-size: 30px;
+    font-size: 15px;
     border-left:10px solid #00008b;
     padding: 3px;
+    font-weight: bold;
 }
 
 p{
@@ -16,13 +18,14 @@ p{
     padding-left: 20px;
     padding-right: 20px;
     text-align: justify;
-    font-size: 25px;
+    font-size: 14px;
 }
 
 h3{
-    font-size: 30px;
+    font-size: 15px;
     border-left: 10px solid #00008b;
     padding: 3px;
+    font-weight: bold;
 }
 
 figure{
@@ -32,7 +35,7 @@ figure{
 }
 
 figcaption{
-    font-size: 20px;
+    font-size: 10px;
     color: black;
     margin-top: 2px;
     display: block;
@@ -42,7 +45,8 @@ figcaption{
 }
 
 h4{
-    font-size: 30px;
+    font-size: 15px;
     border-left: 10px solid #00008b;
     padding: 3px;
+    font-weight: bold;
 }
